@@ -1,61 +1,36 @@
 buildscript {
   repositories {
-    mavenLocal()
     mavenCentral()
-    maven {
-      url "https://jitpack.io"
-      content {
-        excludeGroup "com.github.ben-manes.versions"
-      }
-    }
-
   }
   dependencies {
-    classpath "net.serenity-bdd:serenity-gradle-plugin:2.4.34"
-    classpath group: 'cz.habarta.typescript-generator', name: 'typescript-generator-gradle-plugin', version: '2.36.1070'
+    classpath("net.serenity-bdd:serenity-gradle-plugin:2.4.34")
   }
 }
 
 plugins {
+  id 'java'
   id 'application'
   id 'checkstyle'
   id 'pmd'
   id 'jacoco'
-  id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-  id 'org.springframework.boot' version '2.6.7'
+  id 'io.spring.dependency-management' version '1.1.3'
+  id 'org.springframework.boot' version '3.1.2'
   id 'org.owasp.dependencycheck' version '8.0.2'
   id 'com.github.ben-manes.versions' version '0.41.0'
-  id 'org.sonarqube' version '3.3'
+  id 'org.sonarqube' version '4.3.0.3225'
   id 'idea'
-  id 'hmcts.ccd.sdk' version '0.25.16'
   id 'au.com.dius.pact' version '4.1.7'
-  id 'com.diffplug.spotless' version '6.9.0'
 }
 
-apply plugin: 'cz.habarta.typescript-generator'
 apply plugin: 'com.github.ben-manes.versions'
 apply plugin: 'net.serenity-bdd.aggregator'
 
 group = 'uk.gov.hmcts.reform'
 version = '0.0.1'
 
-spotless {
-
-  java {
-    target 'src/**/*.java'
-    importOrder()
-    removeUnusedImports()
-    trimTrailingWhitespace()
-    indentWithTabs() // or spaces. Takes an integer argument if you don't like 4
-    endWithNewline()
-    googleJavaFormat('1.11.0').aosp().reflowLongStrings()
-
-  }
-}
-
 java {
   toolchain {
-    languageVersion = JavaLanguageVersion.of(11)
+    languageVersion = JavaLanguageVersion.of(17)
   }
 }
 
@@ -103,22 +78,16 @@ configurations {
   integrationTestImplementation.extendsFrom testImplementation
   integrationTestRuntimeOnly.extendsFrom testRuntime
 
-  smokeTestImplementation.extendsFrom testImplementation
-  smokeTestRuntime.extendsFrom testRuntime
-  smokeTestCompile.extendsFrom testCompile
-
   contractTestImplementation.extendsFrom testImplementation
-  contractTestRuntime.extendsFrom testRuntime
-  contractTestCompile.extendsFrom testCompile
+  smokeTest.extendsFrom testImplementation
+  smokeTestImplementation.extendsFrom testImplementation
+  smokeTestRuntimeOnly.extendsFrom runtimeOnly
 }
 
-tasks.withType(JavaCompile) {
-  options.compilerArgs << "-Xlint:unchecked" << "-Werror"
-}
-
-// https://github.com/gradle/gradle/issues/16791
 tasks.withType(JavaExec).configureEach {
-  javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
+  //javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang=ALL-UNNAMED','--add-opens=java.base/java.util=ALL-UNNAMED']
 }
 
 tasks.withType(Test) {
@@ -162,7 +131,6 @@ task smoke(type: Test) {
 checkstyle {
   maxWarnings = 0
   toolVersion = '9.2.1'
-  getConfigDirectory().set(new File(rootDir, 'config/checkstyle'))
 }
 
 pmd {
@@ -184,7 +152,7 @@ jacocoTestReport {
 }
 
 jacoco {
-  toolVersion = "0.8.5"
+  toolVersion = "0.8.8"
 }
 
 jacocoTestCoverageVerification {
@@ -211,6 +179,50 @@ def sonarExclusions = [
   '**/uk/gov/hmcts/reform/hmc/api/enums/**',
   '**/uk/gov/hmcts/reform/hmc/api/services/**',
   '**/uk/gov/hmcts/reform/hmc/api/controllers/HearingsController.java'
+]
+
+
+def versions = [
+  awaitility                   : '4.0.2',
+  bcpkixJdk15on                : '1.64',
+  ccdClient                    : '4.9.2',
+  commonsBeanUtils             : '1.9.4',
+  commonsIo                    : '2.7',
+  commonsLang3                 : '3.9',
+  commonsMath3                 : '3.6.1',
+  dumbster                     : '1.7.1',
+  //feignHttpClient              : '10.3.0',
+  googleAuth                   : '1.5.0',
+  gradlePitest                 : '1.4.5',
+  guava                        : '30.1-jre',
+  hmctsNotify                  : '3.14.1-RELEASE',
+  //  idamClient                   : '1.3.0',
+  httpComponents               : '4.5.13',
+  jackson                      : '2.14.0-rc1',
+  jacksonDatatypeJsr           : '2.13.0',
+  jsonAssert                   : '1.2.3',
+  //  jsonPathAssert               : '2.2.0',
+  junit                        : '4.13.1',
+  junitPlatform                : '5.7.2',
+  lombok                       : '1.18.26',
+  pact                         : '4.1.11',
+  pitest                       : '1.7.3',
+  puppyCrawl                   : '8.43',
+  reformPropertiesVolume       : '0.0.4',
+  reformsJavaLogging           : '5.1.7',
+  sendLetterClient             : '3.0.10',
+  serenity                     : '2.3.10',
+  serenityCucumber             : '1.9.50',
+  serviceTokenGenerator        : '3.1.1',
+  sonarPitest                  : '0.5',
+  springSecurityCrypto         : '5.4.5',
+  springSecurityRsa            : '1.0.9.RELEASE',
+  springBoot                   : '2.7.14',
+  springCloud                  : '3.1.1',
+  tomcat                       : '9.0.69',
+  unirest                      : '1.4.9',
+  ccdCaseDocumentAmClient      : '1.7.3',
+  pdfbox                       : '2.0.24'
 ]
 
 sonarqube {
@@ -260,8 +272,9 @@ dependencyCheck {
 repositories {
   mavenLocal()
   mavenCentral()
+  //jcenter()
   maven { url 'https://jitpack.io' }
-  jcenter()
+  //maven { url 'https://repo.spring.io/libs-milestone' }
 }
 
 ext {
@@ -290,8 +303,8 @@ dependencies {
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
   implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.1.1'
+  implementation group: 'com.puppycrawl.tools', name: 'checkstyle', version: versions.puppyCrawl
 
-  implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: '6.0.1'
   implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.14.0-rc1'
   implementation group: 'com.fasterxml.jackson', name: 'jackson-bom', version: '2.14.0-rc1', ext: 'pom'
   implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: log4JVersion
@@ -300,42 +313,42 @@ dependencies {
   implementation group: 'io.github.openfeign', name: 'feign-httpclient', version: '11.9.1'
   implementation group: 'io.github.openfeign', name: 'feign-jackson', version: '11.9.1'
   implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.1.3'
-  implementation group: 'uk.gov.hmcts.reform', name: 'logging', version: '5.1.7'
-  implementation group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: '5.1.7'
-  implementation group: 'uk.gov.hmcts.reform', name: 'logging-spring', version: '5.1.7'
   implementation group: 'io.springfox', name: 'springfox-swagger2', version: '3.0.0'
   implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
   implementation group: 'io.springfox', name: 'springfox-spring-webflux', version: '3.0.0'
-  implementation group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: '4.0.0'
-  implementation group: 'uk.gov.hmcts.reform', name: 'idam-client', version: '2.0.0'
-  implementation group: 'com.github.hmcts', name: 'ccd-client', version: '4.8.6'
+  implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '4.1.0'
+  implementation group: 'com.github.hmcts', name: 'idam-java-client', version: '3.0.1'
+  implementation group: 'com.github.hmcts', name: 'ccd-client', version: '4.9.2'
   implementation group: 'com.azure', name: 'azure-core', version: '1.21.0'
-  implementation group: 'com.azure', name: 'azure-messaging-servicebus', version: '7.4.2'
-  implementation group: 'com.microsoft.azure', name: 'azure-servicebus', version: '3.6.5'
+  implementation group: 'com.azure', name: 'azure-messaging-servicebus', version: '7.14.2'
+  implementation group: 'com.microsoft.azure', name: 'azure-servicebus', version: '3.6.7'
   implementation group: 'au.com.dius.pact.consumer', name: 'junit5', version: '4.1.11'
   implementation group: 'au.com.dius.pact.consumer', name: 'java8', version: '4.1.11'
   implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
-  compileOnly 'org.projectlombok:lombok:1.18.24'
+  // https://mvnrepository.com/artifact/cglib/cglib
+  implementation group: 'cglib', name: 'cglib', version: '3.3.0'
+  implementation('org.projectlombok:lombok:1.18.24')
   annotationProcessor 'org.projectlombok:lombok:1.18.24'
 
   testRuntimeOnly "org.junit.platform:junit-platform-commons:1.8.2"
 
   testImplementation('org.junit.jupiter:junit-jupiter:5.6.2')
-  contractTestCompile("org.junit.jupiter:junit-jupiter-api:5.8.2")
-  contractTestRuntime("org.junit.jupiter:junit-jupiter-engine:5.8.2")
+  contractTestImplementation("org.junit.jupiter:junit-jupiter-api:5.8.2")
+  contractTestRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.8.2")
   testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.8.2"
-  testCompileOnly 'org.apiguardian:apiguardian-api:1.0.0'
+  testImplementation 'org.apiguardian:apiguardian-api:1.0.0'
   contractTestImplementation('org.junit.jupiter:junit-jupiter-api:5.8.2')
 
-  contractTestCompile sourceSets.main.runtimeClasspath
-  contractTestCompile sourceSets.test.runtimeClasspath
+  contractTestImplementation sourceSets.main.runtimeClasspath
+  contractTestImplementation sourceSets.test.runtimeClasspath
 
   testImplementation group: 'net.serenity-bdd', name: 'serenity-core', version: '2.3.10'
   testImplementation group: 'net.serenity-bdd', name: 'serenity-junit', version: '2.3.10'
   testImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: '2.3.10'
   testImplementation group: 'net.serenity-bdd', name: 'serenity-spring', version: '2.3.10'
 
-  testCompileOnly 'org.projectlombok:lombok:1.18.24'
+  testImplementation 'org.projectlombok:lombok:1.18.24'
+  implementation 'org.projectlombok:lombok:1.18.24'
   testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
   implementation group: 'io.rest-assured', name: 'rest-assured'
   implementation group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.1.1'
@@ -347,7 +360,7 @@ dependencies {
   }
 }
 
-mainClassName = 'uk.gov.hmcts.reform.hmc.api.Application'
+group 'uk.gov.hmcts.reform.hmc.api'
 
 bootJar {
   getArchiveFileName().set(provider {
@@ -369,6 +382,132 @@ rootProject.tasks.named("processIntegrationTestResources") {
   duplicatesStrategy = 'include'
 }
 
+task fortifyScan(type: JavaExec)  {
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 wrapper {
     distributionType = Wrapper.DistributionType.ALL
+}
+
+processContractTestResources {
+  duplicatesStrategy = DuplicatesStrategy.INCLUDE
+}
+processFunctionalTestResources {
+  duplicatesStrategy = DuplicatesStrategy.INCLUDE
+}
+processIntegrationTestResources {
+  duplicatesStrategy = DuplicatesStrategy.INCLUDE
+}
+processSmokeTestResources {
+  duplicatesStrategy = DuplicatesStrategy.INCLUDE
+}
+
+compileJava {
+  options.compilerArgs << '-parameters' << '-Xlint:deprecation'
+}
+
+compileTestJava {
+  options.compilerArgs << '-Xlint:deprecation'
+}
+
+allprojects {
+
+  def springBootVersion = versions.springBoot
+
+  apply plugin: 'checkstyle'
+  apply plugin: 'com.github.ben-manes.versions'
+  apply plugin: 'io.spring.dependency-management'
+  apply plugin: 'jacoco'
+  apply plugin: 'java'
+  apply plugin: 'org.owasp.dependencycheck'
+
+  group = 'uk.gov.hmcts.reform'
+  version = '0.0.1'
+
+  checkstyle.toolVersion = '9.2.1'
+  checkstyle.configFile = new File(rootDir, "config/checkstyle/checkstyle.xml")
+  checkstyle.maxWarnings(0)
+
+  // https://jeremylong.github.io/DependencyCheck/dependency-check-gradle/configuration.html
+  dependencyCheck {
+    // Specifies if the build should be failed if a CVSS score above a specified level is identified.
+    // range of 0-10 fails the build, anything greater and it doesn't fail the build
+    failBuildOnCVSS = System.getProperty('dependencyCheck.failBuild') == 'false' ? 11 : 0
+    suppressionFile = 'config/checkstyle/checkstyle.xml'
+    analyzers {
+      // Disable scanning of .NET related binaries
+      assemblyEnabled = false
+    }
+  }
+
+  java {
+    toolchain {
+      languageVersion = JavaLanguageVersion.of(17)
+    }
+  }
+
+  tasks.withType(JavaExec).configureEach {
+    //javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
+    classpath += sourceSets.test.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang=ALL-UNNAMED','--add-opens=java.base/java.util=ALL-UNNAMED']
+  }
+
+  repositories {
+    mavenLocal()
+    mavenCentral()
+    maven { url 'https://jitpack.io' }
+    //maven { url 'https://repo.spring.io/libs-milestone' }
+  }
+
+  dependencyManagement {
+    imports {
+      mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
+    }
+    dependencies {
+      dependencySet(
+        group: 'com.fasterxml.jackson.core',
+        version: versions.jackson
+      ) {
+        entry 'jackson-core'
+        entry 'jackson-databind'
+      }
+      dependencySet(
+        group: 'com.fasterxml.jackson.datatype',
+        version: versions.jackson
+      ) {
+        entry 'jackson-datatype-jdk8'
+        entry 'jackson-datatype-jsr310'
+      }
+      dependencySet(
+        group: 'com.fasterxml.jackson.module',
+        version: versions.jackson
+      ) {
+        entry 'jackson-module-parameter-names'
+      }
+
+      // solves CVE-2014-3488, CVE-2015-2156, CVE-2019-16869, CVE-2021-21409
+      dependencySet(group: 'io.netty', version: '4.1.87.Final') {
+        entry 'netty-buffer'
+        entry 'netty-codec'
+        entry 'netty-codec-http'
+        entry 'netty-common'
+        entry 'netty-handler'
+        entry 'netty-resolver'
+        entry 'netty-transport'
+      }
+      // CVE-2019-10086
+      dependency group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.4'
+      // CVE-2020-9484
+      dependencySet(group: 'org.apache.tomcat.embed', version: versions.tomcat) {
+        entry 'tomcat-embed-core'
+        entry 'tomcat-embed-websocket'
+        entry 'tomcat-embed-el'
+      }
+      //CVE-2017-18640
+      dependency group: 'org.yaml',name: 'snakeyaml', version: '1.32'
+
+    }
+  }
 }
